Test/Production: added 'background: rgba(0, 0, 0, 0.20);' to '.cssmodal' in both Test (gStyle.css) and Production (style.css) as I had accidentally removed it previoulsy. It provides a backdrop for the CSS Modals that looks the same as that for the JS Modals.

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -342,6 +342,7 @@ Displays details without leaving the page, providing a clear and clean navigatio
     width: 100%;
     height: 100%;
     overflow: auto;
+    background: rgba(0, 0, 0, 0.20);
 }
 
 /* Display the modal when targeted */
